lighthouse & fixed navigation left padding irritating the centering of the navigation on small screens

--- a/styles/ExperienceItem.module.scss
+++ b/styles/ExperienceItem.module.scss
@@ -10,7 +10,7 @@
 }
 .period {
     font-size: 12px;
-    color: rgb(151, 151, 151);
+    color: #404040;
     text-transform: uppercase;
     margin-bottom: 0.6rem;
 }
