--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -149,6 +149,7 @@ header {
         ul {
             list-style: none;
             display: flex;
+            padding-left: 0;
 
             & > li {
                 display: flex;
